RESOLVED FIXED136208
Web Core: Fix unused parameter build warning
https://bugs.webkit.org/show_bug.cgi?id=136208
Summary Web Core: Fix unused parameter build warning
Shivakumar J M
Reported 2014-08-24 23:58:09 PDT
Got unused paramet build warning during Wk2-EFL build on revision 172901. /home/shiva.jm/webkit-git/svngitjuly01/WebKit/Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:394:6: warning: unused parameter ‘purpose’ [-Wunused-parameter] void CoordinatedGraphicsLayer::setContentsToPlatformLayer(PlatformLayer* platformLayer, ContentsLayerPurpose purpose)
Attachments
Patch (1.48 KB, patch)
2014-08-25 00:05 PDT, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2014-08-25 00:05:46 PDT
Created attachment 237060 [details] Patch Fix unused build warning by removing parameter, which is not used.
WebKit Commit Bot
Comment 2 2014-08-25 01:18:13 PDT
Comment on attachment 237060 [details] Patch Clearing flags on attachment: 237060 Committed r172906: <http://trac.webkit.org/changeset/172906>
WebKit Commit Bot
Comment 3 2014-08-25 01:18:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.