Web Core: Fix unused parameter build warning. https://bugs.webkit.org/show_bug.cgi?id=136208

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-08-25
Reviewed by Darin Adler.

Fix unused build warning by removing parameter, which is not used.

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::setContentsToPlatformLayer):

Canonical link: https://commits.webkit.org/154036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172906 268f45cc-cd09-0410-ab3c-d52691b4dbfc